#1478: Add fix for number overflow on key emergences; update grid docs

--- a/src/styles/home/_highlighted-emergencies.scss
+++ b/src/styles/home/_highlighted-emergencies.scss
@@ -7,7 +7,12 @@
 }
 
 .card_box, .card_box_footer {
-  padding: $spacing $spacing-2;
+  padding: $spacing ($spacing * 1.5);
+
+  @media(min-width: $media-desktop) {
+    padding: $spacing $spacing-2;
+  }
+
 }
 
 .card_box_title {
@@ -22,8 +27,12 @@
 .card_box_no {
   color: $grey-soot;
   font-weight: $base-font-semi-bold;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   line-height: 1.2;
+
+  @media(min-width: $media-desktop) {
+    font-size: 1.5rem;
+  }
 }
 
 .card_box_left {
